--- a/products/tea.html
+++ b/products/tea.html
@@ -26,9 +26,9 @@
     <meta name="theme-color" content="#2c7744">
     
     <!-- Primary Meta Tags -->
-    <title>Leading Indonesian Tea Products - Black Tea & Green Tea | TropicaFarm</title>
-    <meta name="description" content="Leading Indonesian tea exporter offering wholesale black tea and green tea. Direct from sustainable Java plantations. Bulk quantities available for global importers. Competitive FOB prices, reliable shipping, custom packaging options. ISO and HACCP certified facility.">
-    <meta name="keywords" content="Indonesian black tea, premium green tea, wholesale tea supplier, bulk tea export, sustainable tea plantation, Indonesian tea manufacturer, tea exporter Indonesia, black tea wholesale, green tea export, Java tea wholesale, Indonesian tea direct supplier, tea import from Indonesia, bulk tea purchase Indonesia, wholesale tea distributor Asia, organic tea export Indonesia, Indonesian tea trade, tea manufacturing Indonesia, tea processing facility Java, tea plantation direct export, Indonesian tea MOQ, tea export price Indonesia">
+    <title>Black Tea & Green Tea Wholesale Indonesia | Reliable Tea Exporter | TropicaFarm</title>
+    <meta name="description" content="Reliable Indonesian wholesale tea supplier. Premium black tea and green tea direct from Java plantations. Bulk quantities available for global importers. Competitive FOB prices, ISO certified, sustainable sourcing.">
+    <meta name="keywords" content="black tea wholesale indonesia, green tea wholesale indonesia, indonesian tea exporter, bulk tea supplier, wholesale tea manufacturer, tea export indonesia, black tea bulk, green tea bulk, indonesian tea supplier">
     <meta name="author" content="TropicaFarm">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -41,8 +41,8 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="product">
-    <meta property="og:title" content="Leading Indonesian Tea Products - Black Tea & Green Tea | TropicaFarm">
-    <meta property="og:description" content="Discover high-quality Indonesian tea products from TropicaFarm. Black Tea and Green Tea sourced from sustainable plantations. Available for global wholesale.">
+    <meta property="og:title" content="Black Tea & Green Tea Wholesale Indonesia | Reliable Tea Exporter">
+    <meta property="og:description" content="Reliable Indonesian wholesale tea supplier. Premium black tea and green tea direct from Java plantations. Bulk quantities available for global importers.">
     <meta property="og:image" content="https://tropicafarm.com/assets/images/black-tea-display.jpg">
     <meta property="og:url" content="https://tropicafarm.com/products/tea.html">
     <meta property="og:site_name" content="TropicaFarm">
@@ -53,8 +53,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@tropicafarm">
     <meta name="twitter:creator" content="@tropicafarm">
-    <meta name="twitter:title" content="Leading Indonesian Tea Products - Black Tea & Green Tea">
-    <meta name="twitter:description" content="Discover high-quality Indonesian tea products from TropicaFarm. Black Tea and Green Tea sourced from sustainable plantations.">
+    <meta name="twitter:title" content="Black Tea & Green Tea Wholesale Indonesia | Reliable Tea Exporter">
+    <meta name="twitter:description" content="Reliable Indonesian wholesale tea supplier. Premium black tea and green tea direct from Java plantations. Bulk quantities available for global importers.">
     <meta name="twitter:image" content="https://tropicafarm.com/assets/images/black-tea-display.jpg">
 
     <!-- Additional Meta Tags -->
@@ -433,7 +433,7 @@
                         </div>
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Packaging</h4>
-                            <p class="text-gray-600">25kg kraft paper bags</p>
+                            <p class="text-gray-600">40kg or 50kg kraft paper bags</p>
                             <p class="text-gray-400 text-xs mt-1 font-normal">Custom packaging available upon request</p>
                         </div>
                         <div>
@@ -606,7 +606,7 @@
                         </div>
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Packaging</h4>
-                            <p class="text-gray-600">25kg kraft paper bags</p>
+                            <p class="text-gray-600">40kg or 50kg kraft paper bags</p>
                             <p class="text-gray-400 text-xs mt-1 font-normal">Custom packaging available upon request</p>
                         </div>
                         <div>
@@ -748,7 +748,7 @@
                         </div>
                         <div>
                             <h4 class="font-semibold text-gray-800 mb-2">Packaging</h4>
-                            <p class="text-gray-600">25kg kraft paper bags</p>
+                            <p class="text-gray-600">40kg or 50kg kraft paper bags</p>
                             <p class="text-gray-400 text-xs mt-1 font-normal">Custom packaging available upon request</p>
                         </div>
                         <div>
@@ -835,7 +835,7 @@
                     </div>
 
                     <!-- White Tea -->
-                    <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px] variant-card" onclick="openVariantPopup('White Tea', 'White tea is the least processed tea, harvested before the leaves fully open, resulting in a delicate flavor and high antioxidant content.', '/assets/images/specialty-tea-white.jpg')">
+                    <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer w-[200px] variant-card" onclick="openVariantPopup('White Tea', 'White tea is the least processed tea, harvested before the leaves fully open, resulting in a delicate flavor and high antioxidant content.', '/assets/images/specialty-tea-white-tea.jpg')">
                         <div class="flex flex-col relative">
                             <div class="h-48 relative">
                                 <img src="/assets/images/specialty-tea-white-tea-thumbnail.jpg" alt="Specialty Tea White" class="w-full h-full object-cover variant-thumb">
@@ -1008,6 +1008,68 @@
             </div>
         </div>
     </section>
+
+    <!-- FAQ Section -->
+    <section class="py-20 bg-light">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold text-primary mb-8 text-center">Frequently Asked Questions</h2>
+            <div class="max-w-4xl mx-auto space-y-6">
+                <div class="bg-white p-6 rounded-xl shadow-lg">
+                    <h3 class="text-xl font-semibold mb-3">What types of black tea do you offer for wholesale?</h3>
+                    <p class="text-gray-600">We offer various black tea grades including PF (Pekoe Fannings), OP (Orange Pekoe), BOP (Broken Orange Pekoe), BOPF (Broken Orange Pekoe Fannings), and Dust. Each grade is suitable for different applications and preferences.</p>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow-lg">
+                    <h3 class="text-xl font-semibold mb-3">What types of green tea do you offer for wholesale?</h3>
+                    <p class="text-gray-600">Our green tea selection includes Chun Mee, Fannings, Gun Powder, Pekoe Super, and Sow Mee. Each variant offers unique characteristics and flavors suitable for different market needs.</p>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow-lg">
+                    <h3 class="text-xl font-semibold mb-3">What is your minimum order quantity and packaging options?</h3>
+                    <p class="text-gray-600">Our minimum order quantity is 1 ton. We offer flexible packaging options with 40kg or 50kg kraft paper bags, depending on the tea variant. Custom packaging solutions are available upon request.</p>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow-lg">
+                    <h3 class="text-xl font-semibold mb-3">Where are your tea plantations located?</h3>
+                    <p class="text-gray-600">Our tea plantations are located in the highlands of West Java, Indonesia, known for producing premium quality tea leaves.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [{
+        "@type": "Question",
+        "name": "What types of black tea do you offer for wholesale?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "We offer various black tea grades including PF (Pekoe Fannings), OP (Orange Pekoe), BOP (Broken Orange Pekoe), BOPF (Broken Orange Pekoe Fannings), and Dust. Each grade is suitable for different applications and preferences."
+        }
+      }, {
+        "@type": "Question",
+        "name": "What types of green tea do you offer for wholesale?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Our green tea selection includes Chun Mee, Fannings, Gun Powder, Pekoe Super, and Sow Mee. Each variant offers unique characteristics and flavors suitable for different market needs."
+        }
+      }, {
+        "@type": "Question",
+        "name": "What is your minimum order quantity and packaging options?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Our minimum order quantity is 1 ton. We offer flexible packaging options with 40kg or 50kg kraft paper bags, depending on the tea variant. Custom packaging solutions are available upon request."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Where are your tea plantations located?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Our tea plantations are located in the highlands of West Java, Indonesia, known for producing premium quality tea leaves."
+        }
+      }]
+    }
+    </script>
 
     <!-- Footer (reuse from index.html but adjust paths) -->
     <footer class="bg-[#1e2124] text-gray-300 py-16">
@@ -1281,8 +1343,8 @@
     {
       "@context": "https://schema.org",
       "@type": "Product",
-      "name": "Indonesian Export Tea Products",
-      "description": "Premium quality Indonesian tea for export. Available in bulk quantities for international buyers.",
+      "name": "Black Tea & Green Tea Wholesale Indonesia",
+      "description": "Reliable Indonesian wholesale tea supplier. Premium black tea and green tea direct from Java plantations. Bulk quantities available for global importers.",
       "brand": {
         "@type": "Brand",
         "name": "TropicaFarm"
@@ -1294,13 +1356,13 @@
         "seller": {
           "@type": "Organization",
           "name": "TropicaFarm",
-          "description": "Leading Indonesian tea exporter since 2004"
+          "description": "Reliable Indonesian tea exporter since 2004"
         },
         "businessFunction": "http://purl.org/goodrelations/v1#Sell",
         "itemCondition": "https://schema.org/NewCondition",
         "availableDeliveryMethod": "http://purl.org/goodrelations/v1#DeliveryModeFreight"
       },
-      "keywords": "wholesale tea export, bulk tea supplier Indonesia, Indonesian tea manufacturer, tea export price, Java tea wholesale",
+      "keywords": "black tea wholesale indonesia, green tea wholesale indonesia, wholesale tea export, bulk tea supplier Indonesia, Indonesian tea manufacturer, tea export price, Java tea wholesale",
       "countryOfOrigin": {
         "@type": "Country",
         "name": "Indonesia"
@@ -1313,7 +1375,13 @@
           "addressCountry": "ID",
           "addressRegion": "West Java"
         }
-      }
+      },
+      "category": "Tea",
+      "material": "Tea Leaves",
+      "productID": "TF-TEA-2024",
+      "sku": "TF-TEA-2024",
+      "gtin": "TF-TEA-2024",
+      "mpn": "TF-TEA-2024"
     }
     </script>
 
